--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -7,14 +7,39 @@
     <groupId>com.felixwc.dubbo.demo1</groupId>
     <artifactId>demo1</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>function-entity</module>
+        <module>provider</module>
+    </modules>
     <packaging>pom</packaging>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <encoding>UTF-8</encoding>
+    </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>2.5.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <artifactId>demo1</artifactId>
+                <groupId>com.felixwc.dubbo.demo1</groupId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.20</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>2.7.14</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
