--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>function-entity</module>
         <module>provider</module>
+        <module>consumer</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
@@ -27,8 +28,8 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <artifactId>demo1</artifactId>
                 <groupId>com.felixwc.dubbo.demo1</groupId>
+                <artifactId>function-entity</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
@@ -41,8 +42,24 @@
                 <artifactId>dubbo-spring-boot-starter</artifactId>
                 <version>2.7.14</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-framework</artifactId>
+                <version>5.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-recipes</artifactId>
+                <version>5.2.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
